--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+server.port = 8081
+
 spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
