- Added EmailService and tests

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,12 @@ spring.datasource.url=jdbc:h2:mem:~/journals
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+mail.smtp.host=localhost
+mail.smtp.protocol=smtp
+mail.smtp.port=25
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
+mail.smtp.from=noreply@journals.com
+mail.smtp.user=
+mail.smtp.passwd=
