--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 multipart.maxFileSize=1MB
 multipart.maxRequestSize=1MB
+
+mail.smtp.host=smtp.gmail.com
+mail.smtp.protocol=smtp
+mail.smtp.port=587
+mail.smtp.from=noreply@journals.com
+mail.smtp.user=FILL-ME
+mail.smtp.passwd=FILL-ME
+mail.smtp.auth=true
+mail.debug=true
+mail.smtp.starttls.enable=true
+mail.smtp.socketFactory.class=com.crossover.trial.journals.service.email.MySSLSocketFactory
