- Multiple fixes and features added.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8081
+server.port = 8083
 
 spring.datasource.url=jdbc:mysql://localhost:3306/journals?createDatabaseIfNotExist=true
 spring.datasource.username=root
@@ -18,9 +18,15 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.protocol=smtp
 mail.smtp.port=587
 mail.smtp.from=noreply@journals.com
-mail.smtp.user=FILL-ME
-mail.smtp.passwd=FILL-ME
+mail.smtp.user=medicaljournals1980@gmail.com
+mail.smtp.passwd=biobiobio!
 mail.smtp.auth=true
 mail.debug=true
 mail.smtp.starttls.enable=true
 mail.smtp.socketFactory.class=com.crossover.trial.journals.service.email.MySSLSocketFactory
+
+journals.activemq.broker.url=tcp://localhost:61616
+journals.activemq.broker.username=admin
+journals.activemq.broker.password=admin
+journals.activemq.queue.new-publication=new-publication-queue
+journals.activemq.queue.daily-notification=daily-notification-queue
